fixed overflow issue

--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -16,6 +16,7 @@
   height: 80vh;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 .photo_container {
